Adjust tab title and icon. Fix a couple minor shifting issues.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+  background-color: white;
+  padding-left: calc(100vw - 100%);
+}
